cargo-features = ["edition2021"]

[workspace]

[package]
name = "hms_project"
version = "0.0.1"
authors = ["dd"]
edition = "2021"

[dependencies]
actix-web = "3.3.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
actix-cors = "0.5.4"
sea-orm = { version = "0.4.2", features = [ "sqlx-mysql" , "runtime-actix-native-tls", "macros" ], default-features = false }
config = "0.13.1"
